--- a/references.bib
+++ b/references.bib
@@ -41,23 +41,39 @@
   doi = {10.18637/jss.v067.c03}
 }
 
+@article{Marcon2023,
+  title = {Mapping Distributions in Non-Homogeneous Space with Distance-Based Methods},
+  author = {Marcon, Eric and Puech, Florence},
+  year = {2023},
+  month = dec,
+  journal = {Journal of Spatial Econometrics},
+  volume = {4},
+  number = {1},
+  pages = {13},
+  issn = {2662-2998, 2662-298X},
+  doi = {10.1007/s43071-023-00042-1},
+  urldate = {2023-12-06},
+  copyright = {All rights reserved},
+  langid = {english}
+}
+
 @article{Matern1960,
   title = {Spatial Variation},
   author = {Mat{\'e}rn, Bertil},
   year = {1960},
-  journal = {Meddelanden fr\aa n Statens Skogsforskningsinstitut},
+  journal = {Meddelanden fr{\aa}n Statens Skogsforskningsinstitut},
   volume = {49},
   number = {5},
   pages = {1--144}
 }
 
 @book{Matheron1970,
-  title = {La Th\'eorie Des Variables Regionalis\'ees et Ses Applications},
+  title = {La Th{\'e}orie Des Variables Regionalis{\'e}es et Ses Applications},
   author = {Matheron, Georges},
   year = {1970},
-  series = {Les Cahiers Du Centre de Morphologie Math\'ematique de {{Fontainebleau}}},
+  series = {Les Cahiers Du Centre de Morphologie Math{\'e}matique de {{Fontainebleau}}},
   volume = {5},
-  publisher = {{Ecole Nationale Sup\'erieure des Mines de Paris}},
+  publisher = {{Ecole Nationale Sup{\'e}rieure des Mines de Paris}},
   address = {{Fontainebleau}}
 }
 
